@@ -1,20 +1,22 @@
-package com.reman8683.neis4j.api;
+package com.reman8683.neis4j.meal;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
-import com.reman8683.neis4j.dto.Meal;
-import com.reman8683.neis4j.dto.School;
+import com.reman8683.neis4j.school.School;
 import com.squareup.okhttp.HttpUrl;
 
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import static com.reman8683.neis4j.dto.School.NEIS_URL;
+import static com.reman8683.neis4j.APIRequest.getResponseFromNeisApi;
+import static com.reman8683.neis4j.school.School.NEIS_URL;
 
-public class MealInfo {
-    public Meal getMeal(School school, String mealYMD) throws IOException {
+public class MealInfoApi {
+    protected Meal getMeal(School school, String mealYMD) throws IOException {
         HttpUrl httpUrl = new HttpUrl.Builder()
                 .scheme("https")
                 .host(NEIS_URL)
@@ -33,13 +35,13 @@ public class MealInfo {
 
     private Meal NeisJsonToMeal(School school, String mealYMD, HttpUrl httpUrl) throws IOException {
         Gson gson = new Gson();
-        JsonArray schoolReq = gson.fromJson(FindSchool.getResponseFromNeisApi(httpUrl), JsonObject.class).get("mealServiceDietInfo").getAsJsonArray();
-        if (schoolReq.get(0).getAsJsonObject().get("head").getAsJsonArray().get(1).getAsJsonObject().get("RESULT").getAsJsonObject().get("CODE").getAsString().equals("INFO-000")) {
-            JsonObject mealData = schoolReq.get(1).getAsJsonObject().get("row").getAsJsonArray().get(0).getAsJsonObject();
+        JsonArray mealReq = gson.fromJson(getResponseFromNeisApi(httpUrl), JsonObject.class).get("mealServiceDietInfo").getAsJsonArray();
+        if (mealReq.get(0).getAsJsonObject().get("head").getAsJsonArray().get(1).getAsJsonObject().get("RESULT").getAsJsonObject().get("CODE").getAsString().equals("INFO-000")) {
+            JsonObject mealData = mealReq.get(1).getAsJsonObject().get("row").getAsJsonArray().get(0).getAsJsonObject();
             List<String> menu = Arrays.stream(
                     mealData.get("DDISH_NM").getAsString()
                             .replace(" ", "").split("<br/>")
-            ).toList();
+            ).collect(Collectors.toList());
             return new Meal(
                     school,
                     mealYMD,
